--- a/app/views/admins/members/new.html.erb
+++ b/app/views/admins/members/new.html.erb
@@ -1,4 +1,4 @@
-<section class="container w-50 mt-5">
+<section class="container col-md-5 mt-5">
   <!--セクションタイトル-->
   <h2 class="section-ttl row mb-3">メンバー新規登録</h2>
 
@@ -106,6 +106,3 @@
 
 
 </section>
-
-<!--フッター-->
-<%= render '/layouts/footer' %>
