--- a/app/views/admins/members/show.html.erb
+++ b/app/views/admins/members/show.html.erb
@@ -1,15 +1,15 @@
-<section class="container w-50 mt-5">
+<section class="container col-md-5 mt-5">
   <!--セクションタイトル-->
   <h2 class="section-ttl row mb-3">スタッフ・選手詳細</h2>
 
-  <div class="container bg-light">
+  <div class="bg-light">
     <div class="row justify-content-center">
       <!--メンバー画像-->
-      <div class="col">
+      <div class="col-md-6 col-sm-12">
         <%= attachment_image_tag @member, :image, :fill, 300, 300, fallback: "no_image.jpg", size:'300x300' %>
       </div>
       <!--メンバー詳細説明-->
-      <div class="col font-weight-bold pt-5">
+      <div class="col-md-6 col-sm-12 font-weight-bold pt-5">
         <label>氏名：</label>
         <%= @member.last_name + " " + @member.first_name %>
         <br>
@@ -38,5 +38,5 @@
   </div>
     <%= link_to "編集", edit_admins_member_path(@member.id), class: "btn btn-outline-secondary m-3" %>
     <%= link_to "削除", admins_member_path(@member.id), method: :delete, "data-confirm" => "表示されているメンバーを削除しますか?", class: "btn btn-outline-secondary text-danger m-3" %>
-  
+    <%= link_to "戻る", admins_members_path, class: "btn btn-outline-secondary m-3" %>
 </section>
