--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -31,6 +31,18 @@ body {
 
 }
 
+//エラーメッセージレイアウト
+.error-message {
+  background-color: #fadbda;
+  padding: 10px;
+  margin: 10px 10px 20px 0px;
+  border-radius: 0.65em;
+}
+
+ul {
+  list-style: inside;
+}
+
 //ページネーションのレイアウト
 
 .page-item.active .page-link{
