--- a/app/views/admins/members/new.html.erb
+++ b/app/views/admins/members/new.html.erb
@@ -101,7 +101,7 @@
 
     <div class="row">
       <div class="form-group col">
-      <%= f.submit "登録する", class: "btn btn-success mt-3" %>
+      <%= f.submit "登録する", class: "btn btn-outline-secondary m-3" %>
       </div>
     </div>
 
