--- a/app/views/admins/graduates/edit.html.erb
+++ b/app/views/admins/graduates/edit.html.erb
@@ -1,49 +1,48 @@
-<section class="inner">
-  <!--セッションタイトル-->
-  <div class="section-ttl">
-    <h4 class="">OB紹介編集</h4>
-  </div>
+<section class="container col-md-5 mt-5">
+  <!--セクションタイトル-->
+  <h2 class="section-ttl row mb-3">OB情報を編集してください。</h2>
 
-  <div class="container admins_graduate_edit">
-    <%= form_with model: @graduate, url: "/admins/graduates/#{@graduate.id}", local:true do |f| %>
-    <!--OB編集フォーム-->
-      <!--写真-->
-      <div class="row">
-        <div class="col-10 col-md-6 form-group">
-          <%= f.label :image, "集合写真", class: "form-label" %>
-          <%= f.attachment_field :image %>
-        </div>
+  <!--OB編集フォーム-->
+  <%= form_with model: @graduate, url: "/admins/graduates/#{@graduate.id}", local:true do |f| %>
+  
+    <!--エラーメッセージ-->
+    <%= render 'layouts/error_messages', model: f.object %>
+  
+    <!--写真-->
+    <div class="row">
+      <div class="form-group col-10 col-md-6">
+        <%= f.label :image, "集合写真", class: "form-label" %>
+        <%= f.attachment_field :image %>
       </div>
-      <!--卒業年度-->
-      <div class="row">
-        <div class="col-2 form-group">
-          <%= f.label :year, "卒業年度", class: "form-label" %>
-          <%= f.text_field :year, class: "form-control" %>
-        </div>
+    </div>
+    <!--卒業年度-->
+    <div class="row">
+      <div class="form-group col-md-2">
+        <%= f.label :year, "卒業年度", class: "form-label" %>
+        <%= f.text_field :year, class: "form-control" %>
       </div>
-      <!--卒業生一覧-->
-      <div class="row">
-        <div class="col-10 col-md-12 form-group">
-          <%= f.label :member_list, "メンバー", class: "form-label" %><span>（１名ずつ改行して入力してください。）</span>
-          <%= f.text_area :member_list, class: "form-control", rows: "10" %>
-        </div>
+    </div>
+    <!--卒業生一覧-->
+    <div class="row">
+      <div class="form-group col-md-12">
+        <%= f.label :member_list, "メンバー一覧", class: "form-label" %><span>（１名ずつ改行して入力してください。）</span>
+        <%= f.text_area :member_list, class: "form-control", rows: "10" %>
       </div>
-      <!--卒業生の主な進路一覧-->
-      <div class="row">
-        <div class="col-10 col-md-12 form-group">
-          <%= f.label :career_after_graduation, "主な進路", class: "form-label" %><span>（改行して入力してください。）</span>
-          <%= f.text_area :career_after_graduation, class: "form-control", rows: "10" %>
-        </div>
+    </div>
+    <!--卒業生の主な進路一覧-->
+    <div class="row">
+      <div class="form-group col-md-12">
+        <%= f.label :career_after_graduation, "主な進路", class: "form-label" %><span>（改行して入力してください。）</span>
+        <%= f.text_area :career_after_graduation, class: "form-control", rows: "10" %>
       </div>
+    </div>
 
-      <div class="row actions">
-        <%= f.submit "編集を保存", class: "btn btn-success" %>
+    <div class="row">
+      <div class="form-group col">
+      <%= f.submit "変更を保存", class: "btn btn-outline-secondary m-3" %>
       </div>
+    </div>
 
-    <% end %>
-  </div>
+  <% end %>
 
 </section>
-
-<!--フッター-->
-<%= render '/layouts/footer' %>
