--- a/app/views/admins/members/edit.html.erb
+++ b/app/views/admins/members/edit.html.erb
@@ -2,23 +2,23 @@
   <!--セクションタイトル-->
   <h2 class="section-ttl row mb-3">メンバー情報を編集してください。</h2>
 
-  <!--メンバー追加フォーム-->
+  <!--メンバー編集フォーム-->
   <%= form_with model: @member, url: "/admins/members/#{@member.id}", local:true do |f| %>
 
-  <!--エラーメッセージ-->
-  <%= render 'layouts/error_messages', model: f.object %>
-
+    <!--エラーメッセージ-->
+    <%= render 'layouts/error_messages', model: f.object %>
+  
     <div class="form-group">
       <%= f.label :category_id, "カテゴリ", class: "form-label" %>
       <%= f.collection_select :category_id, Category.all, :id, :category_name, include_blank: "-- 選択してください --", class: "form-control invalid-feedback" %>
     </div>
-
+  
     <div class="row">
       <div class="form-group col-md-5">
         <%= f.label :last_name, "姓", class: "form-label" %>
         <%= f.text_field :last_name, class: "form-control" %>
       </div>
-
+  
       <div class="form-group col-md-5">
         <%= f.label :first_name, "名", class: "form-label" %>
         <%= f.text_field :first_name, class: "form-control" %>
@@ -29,76 +29,76 @@
         <%= f.label :last_name_kana, "セイ", class: "form-label" %>
         <%= f.text_field :last_name_kana, class: "form-control" %>
       </div>
-
+  
       <div class="form-group col-md-5">
         <%= f.label :first_name_kana, "メイ", class: "form-label" %>
         <%= f.text_field :first_name_kana, class: "form-control" %>
       </div>
     </div>
-
+  
     <div class="row">
       <div class="form-group col-md-12">
         <%= f.radio_button :grade, Member.grades.key(0) %>
         <%= f.label :grade, Member.grades_i18n[:grade_1st] %>
-
+  
         <%= f.radio_button :grade, Member.grades.key(1) %>
         <%= f.label :grade, Member.grades_i18n[:grade_2nd] %>
-
+  
         <%= f.radio_button :grade, Member.grades.key(2) %>
         <%= f.label :grade, Member.grades_i18n[:grade_3rd] %>
-
+  
         <%= f.radio_button :grade, Member.grades.key(3) %>
         <%= f.label :grade, Member.grades_i18n[:staff] %>
       </div>
     </div>
-
+  
     <div class="row">
       <div class="form-group col-md-7">
         <%= f.label :position, "ポジション" %>
         <%= f.text_field :position, class: "form-control" %>
       </div>
     </div>
-
+  
     <div class="row">
       <div class="form-group col-md-2">
         <%= f.label :height, "身長" %>
         <%= f.text_field :height, class: "form-control" %>
       </div>
-
+  
       <div class="form-group col-md-2">
         <%= f.label :weight, "体重" %>
         <%= f.text_field :weight, class: "form-control" %>
       </div>
     </div>
-
+  
     <div class="row">
       <div class="form-group col-md-10">
         <%= f.label :original_team, "出身チーム" %>
         <%= f.text_area :original_team, class: "form-control" %>
       </div>
     </div>
-
+  
     <div class="row">
       <div class="form-group col-md-10">
         <%= f.label :hobby, "趣味" %>
         <%= f.text_area :hobby, class: "form-control" %>
       </div>
     </div>
-
+  
     <div class="row">
       <div class="form-group col-md-10">
         <%= f.label :goal, "目標" %>
         <%= f.text_area :goal, class: "form-control" %>
       </div>
     </div>
-
+  
     <div class="row">
       <div class="form-group col">
         <%= f.label :image, "メンバー画像" %>
         <%= f.attachment_field :image %>
       </div>
     </div>
-
+  
     <div class="row">
       <div class="form-group col">
       <%= f.submit "変更を保存", class: "btn btn-outline-secondary m-3" %>
