--- a/app/views/admins/game_results/edit.html.erb
+++ b/app/views/admins/game_results/edit.html.erb
@@ -1,58 +1,56 @@
-<section class="inner">
-  <!--セッションタイトル-->
-  <div class="section-ttl">
-    <h4 class="">試合結果の編集</h4>
-  </div>
+<section class="container col-md-5 mt-5">
+  <!--セクションタイトル-->
+  <h2 class="section-ttl row mb-3">試合結果を編集してください。</h2>
 
-  <div class="container admins_game_result_edit">
-    <%= form_with model: @game_result, url: "/admins/game_results/#{@game_result.id}", local:true do |f| %>
-    <!--試合結果登録フォーム-->
-      <!--写真-->
-      <div class="row">
-        <div class="col-10 col-md-6 form-group">
-          <%= f.label :image, "写真", class: "form-label" %>
-          <%= f.attachment_field :image %>
-        </div>
+  <!--試合結果編集フォーム-->
+  <%= form_with model: @game_result, url: "/admins/game_results/#{@game_result.id}", local:true do |f| %>
+  
+  <!--エラーメッセージ-->
+    <%= render 'layouts/error_messages', model: f.object %>
+    
+    <!--写真-->
+    <div class="row">
+      <div class="form-group col-md-6">
+        <%= f.label :image, "写真", class: "form-label" %>
+        <%= f.attachment_field :image %>
       </div>
-      <!--大会名-->
-      <div class="row">
-        <div class="col-10 col-md-12 form-group">
-          <%= f.label :tournament_name, "大会名", class: "form-label" %>
-          <%= f.text_field :tournament_name, class: "form-control" %>
-        </div>
+    </div>
+    <!--大会名-->
+    <div class="row">
+      <div class="form-group col-md-12">
+        <%= f.label :tournament_name, "大会名", class: "form-label" %>
+        <%= f.text_field :tournament_name, class: "form-control" %>
       </div>
-      <!--試合のタイトル-->
-      <div class="row">
-        <div class="col-10 col-md-12 form-group">
-          <%= f.label :game_title, "試合のタイトル", class: "form-label" %>
-          <%= f.text_field :game_title, class: "form-control" %>
-        </div>
+    </div>
+    <!--試合のタイトル-->
+    <div class="row">
+      <div class="form-group col-md-12">
+        <%= f.label :game_title, "試合のタイトル", class: "form-label" %>
+        <%= f.text_field :game_title, class: "form-control" %>
       </div>
-      <!--開催日-->
-      <div class="row">
-        <div class="col-10 col-md-6 form-group">
-          <%= f.label :event_date, "開催日", class: "form-label" %>
-          <%= f.datetime_field :event_date, class: "form-control" %>
-        </div>
+    </div>
+    <!--開催日-->
+    <div class="row">
+      <div class="form-group col-md-3">
+        <%= f.label :event_date, "開催日", class: "form-label" %>
+        <%= f.datetime_field :event_date, class: "form-control" %>
       </div>
-      <span>（時間は開始時間を入力してください。）</span>
-      <!--結果内容-->
-      <div class="row">
-        <div class="col-10 col-md-12 form-group">
-          <%= f.label :results_details, "結果内容", class: "form-label" %>
-          <%= f.text_area :results_details, class: "form-control", rows: "10" %>
-        </div>
+    </div>
+    <span>（時間は開始時間を入力してください。）</span>
+    <!--結果内容-->
+    <div class="row">
+      <div class="form-group col-md-12">
+        <%= f.label :results_details, "結果内容", class: "form-label" %>
+        <%= f.text_area :results_details, class: "form-control", rows: "10" %>
       </div>
+    </div>
 
-      <div class="row actions">
-        <%= f.submit "変更を保存", class: "btn btn-success" %>
-
+    <div class="row">
+      <div class="form-group">
+      <%= f.submit "変更を保存", class: "btn btn-outline-secondary m-3" %>
       </div>
+    </div>
 
-    <% end %>
-  </div>
+  <% end %>
 
 </section>
-
-<!--フッター-->
-<%= render '/layouts/footer' %>
