--- a/app/views/admins/game_results/show.html.erb
+++ b/app/views/admins/game_results/show.html.erb
@@ -1,48 +1,48 @@
-<section class="inner">
-  <!--セッションタイトル-->
-  <div class="section-ttl">
-    <h4 class="">試合結果</h4>
-  </div>
+<section class="container col-md-5 mt-5">
+  <!--セクションタイトル-->
+  <h2 class="section-ttl row mb-3">試合結果詳細</h2>
+  
+  <!-- サクセスメッセージの表示 -->
+  <p id="notice" class="text-danger">
+    <%= notice %>
+  </p>
+
   <!--試合結果詳細-->
-  <div class="container admins_graduate">
-    <div class="row">
-      <%= attachment_image_tag @game_result, :image, :fill, 200, 200 %>
-    </div>
-    <div class="row">
-      <table class="table">
-        <thead>
-          <tr>
-            <th class="col-4">項目</th>
-            <th class="col-8">詳細</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-      			<td>大会名</td>
-      			<td><%= @game_result.tournament_name %></td>
-          </tr>
-          <tr>
-      			<td>試合のタイトル</td>
-      			<td><%= @game_result.game_title %></td>
-          </tr>
-          <tr>
-      			<td>開催日</td>
-      			<td><%= @game_result.event_date %></td>
-          </tr>
-          <tr>
-      			<td>結果内容</td>
-      			<td><%= simple_format(@game_result.results_details) %></td>
-          </tr>
-        </tbody>
-      </table>
-    </div>
-    <div class="row">
-      <%= link_to "編集", edit_admins_game_result_path(@game_result.id), class: "btn btn-secondary" %>
-      <%= link_to "削除", admins_game_result_path(@game_result.id), method: :delete, "date-confirm" => "削除しますか？", class: "btn btn-danger" %>
-    </div>
+  <div class="row justify-content-center m-5">
+    <%= attachment_image_tag  @game_result, :image, :fill, 300, 300, fallback: "no_image.jpg", size:'300x300' %>
   </div>
 
-  </section>
+  <!--OB詳細説明-->
+  <div class="roe justify-content-center bg-light">
+    <table class="table">
+      <thead>
+        <tr>
+          <th class="col-4">項目</th>
+          <th class="col-8">詳細</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+    			<td>大会名</td>
+    			<td><%= @game_result.tournament_name %></td>
+        </tr>
+        <tr>
+    			<td>試合のタイトル</td>
+    			<td><%= @game_result.game_title %></td>
+        </tr>
+        <tr>
+    			<td>開催日</td>
+    			<td><%= @game_result.event_date %></td>
+        </tr>
+        <tr>
+    			<td>結果内容</td>
+    			<td><%= simple_format(@game_result.results_details) %></td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+  <%= link_to "編集", edit_admins_game_result_path(@game_result.id), class: "btn btn-outline-secondary m-3" %>
+  <%= link_to "削除", admins_game_result_path(@game_result.id), method: :delete, "date-confirm" => "削除しますか？", class: "btn btn-outline-secondary text-danger m-3" %>
+  <%= link_to "戻る", admins_game_results_path, class: "btn btn-outline-secondary m-3" %>
 
-<!--フッター-->
-<%= render '/layouts/footer' %>
+</section>
