--- a/app/views/admins/graduates/edit.html.erb
+++ b/app/views/admins/graduates/edit.html.erb
@@ -38,7 +38,7 @@
     </div>
 
     <div class="row">
-      <div class="form-group col">
+      <div class="form-group">
       <%= f.submit "変更を保存", class: "btn btn-outline-secondary m-3" %>
       </div>
     </div>
