--- a/app/views/admins/graduates/show.html.erb
+++ b/app/views/admins/graduates/show.html.erb
@@ -7,18 +7,18 @@
     <%= notice %>
   </p>
 
-  <!-OB詳細内容-->
-    <!--OB画像-->
+  <!--OB詳細内容-->
+  <!--OB画像-->
   <div class="row justify-content-center m-5">
     <%= attachment_image_tag  @graduate, :image, :fill, 300, 300, fallback: "no_image.jpg", size:'300x300' %>
   </div>
-    <!--OB詳細説明-->
+  <!--OB詳細説明-->
   <div class="roe justify-content-center bg-light">
     <table class="table">
       <thead>
         <tr>
-          <th class="col-2 col-md-3">項目</th>
-          <th class="col-10 col-md-9">詳細</th>
+          <th class="col-2">項目</th>
+          <th class="col-10">詳細</th>
         </tr>
       </thead>
       <tbody>
