--- a/app/views/admins/graduates/edit.html.erb
+++ b/app/views/admins/graduates/edit.html.erb
@@ -10,7 +10,7 @@
   
     <!--写真-->
     <div class="row">
-      <div class="form-group col-10 col-md-6">
+      <div class="form-group col-md-6">
         <%= f.label :image, "集合写真", class: "form-label" %>
         <%= f.attachment_field :image %>
       </div>
