--- a/app/views/admins/informations/show.html.erb
+++ b/app/views/admins/informations/show.html.erb
@@ -7,7 +7,7 @@
     <%= notice %>
   </p>
 
-  <!--試合結果詳細-->
+  <!--お知らせ詳細-->
   <div class="row justify-content-center m-5">
     <%= attachment_image_tag  @information, :image, :fill, 300, 300, fallback: "no_image.jpg", size:'300x300' %>
   </div>
