--- a/app/views/admins/information_for_guardians/index.html.erb
+++ b/app/views/admins/information_for_guardians/index.html.erb
@@ -1,4 +1,4 @@
-<section class="container col-md-5 mt-5">
+<section class="container mt-5">
   <!--セクションタイトル-->
   <h2 class="section-ttl row mb-3">保護者専用お知らせ一覧</h2>
   
