--- a/app/views/admins/information_for_guardians/show.html.erb
+++ b/app/views/admins/information_for_guardians/show.html.erb
@@ -12,7 +12,7 @@
     <%= attachment_image_tag  @informationforguardian, :image, :fill, 300, 300, fallback: "no_image.jpg", size:'300x300' %>
   </div>
 
-  <div class="roe justify-content-center bg-light">
+  <div class="row justify-content-center bg-light">
     <table class="table">
       <thead>
         <tr>
